@@ -16,6 +16,7 @@ WPML popular post view rating on details page all the same as main post - FIXED
 Import Export is now compatible with WPML - FIXED
 Popular post widget set to use "All" if no category selected - CHANGED
 Linked business events are not displayed on detail page for cached post - FIXED
+Post images and location details not translated with WPML duplicate option - FIXED
 
 v1.4.9
 Google Analytics extra error messages added to help users debug - ADDED
